--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,8 @@ img {
 input{
   /* align-items: center; */
   /* text-align: center; */
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
   border-radius: 5px;
   padding: 5px;
 }
