--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -3,5 +3,9 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 16px;
-    border-bottom: 1px solid #2a363b;
+    /* border-bottom: 5px solid #2a363b; */
+    background-color: #1976d2;
+    border-radius: 10px;
+    box-shadow: 0px 16px 25px 1px rgba(0, 0, 0, 0.53);
+    padding: 10px;
 }
